--- a/mobile.html
+++ b/mobile.html
@@ -63,6 +63,7 @@
 <body>
     <div class="imagens-container">
         <img src="graph.png" alt="Gráfico do Tempo Atual" class="imagem1">
+        <img src="radar.png" alt="Radar Atual" class="imagem1">
         <img src="extremes_graph.png" alt="Extremos recentes" class="imagem2">
         <img src="mapa.png" alt="Mapa estações" class="imagem3">
         <img src="previsao.png" alt="Previsão do Tempo" class="imagem4">
