--- a/index.html
+++ b/index.html
@@ -63,6 +63,13 @@
             margin-top: 0px; /* Espaçamento acima, separando da imagem 3 */
         }
 
+        .imagem5 {    /* Essa é para o radar */
+            width: auto; /* Ajusta automaticamente a largura para manter a proporção */
+            height: 400px; /* Ajuste a altura conforme necessário */
+            display: block;
+            margin-top: 0px; /* Espaçamento acima, separando da imagem 3 */
+        }
+
         /* Adiciona mais espaço entre as imagens e o texto */
         .texto-final {
             margin-top: 30px; /* Ajuste este valor conforme necessário */
@@ -118,7 +125,10 @@
         <!-- Subcontêiner para imagens 1 e 2 -->
         <div class="imagens-horizontal">
             <img src="graph.png" alt="Gráfico do Tempo Atual" class="imagem1">
+        </div>
+        <div class="imagens-vertical">
             <img src="previsao.png" alt="Previsão do Tempo" class="imagem2">
+            <img src="radar.png" alt="Previsão do Tempo" class="imagem5">
         </div>
     </div>
     <h2 class="texto-final">Essa estação também pode ser visualizada no <a href="https://www.wunderground.com/dashboard/pws/ICURITIB28">Weather Underground.</a></h2>
